# statline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ingest.yml
src/statline/: cli.py  config.py  db.py  models.py  scheduler.py
src/statline/backtest/: core.py
src/statline/etl/: ingest.py  ingest_mlb.py  ingest_nhl.py
src/statline/features/: rolling.py
src/statline/providers/: mlb_statsapi.py  nba_balldontlie.py  nhl_statsapi.py
src/statline/utils/: dates.py
tests/: test_cli_smoke.py  test_provider_paginators.py
